--- a/Fase_3_Preparación_de_los_datos.ipynb
+++ b/Fase_3_Preparación_de_los_datos.ipynb
@@ -83,25 +83,27 @@
         "---\n",
         "Al encontrarnos con valores faltantes en el conjunto de datos, es crucial preguntarse:\n",
         "* ¿Cómo afectan estos valores a la integridad y representatividad de la información?\n",
+        "\n",
+        "No hay valores faltantes en el conjunto de datos, por lo que la integridad y representatividad de la información no se ven afectadas por la ausencia de valores.\n",
+        "\n",
         "* ¿Cómo se identificaron los valores faltantes en el conjunto de datos?\n",
+        "\n",
+        "No se identificaron valores faltantes, ya que no existen en el conjunto de datos.\n",
+        "\n",
         "* ¿Cuáles fueron los criterios para decidir si rellenar con valores estimados o eliminar los valores faltantes? En caso que aplique, ¿qué método de relleno se utilizó y por qué se consideró apropiado?\n",
-        "* ¿Se realizó un análisis de la distribución de los valores faltantes en relación con las variables clave? Por ejemplo, si hay valores faltantes en una variable crítica, ¿cómo podría afectar la interpretación de los resultados?"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "rJ51sNCRgl58"
-      },
-      "source": [
-        "---**INGRESE SU RESPUESTA**---"
+        "\n",
+        "Dado que no hay valores faltantes, no fue necesario tomar decisiones sobre rellenar o eliminar valores faltantes. No se aplicó ningún método de imputación o eliminación.\n",
+        "\n",
+        "* ¿Se realizó un análisis de la distribución de los valores faltantes en relación con las variables clave? Por ejemplo, si hay valores faltantes en una variable crítica, ¿cómo podría afectar la interpretación de los resultados?\n",
+        "\n",
+        "No se identificaron valores faltantes en ninguna variable del conjunto de datos. El mapa de calor muestra que todas las celdas están completas, lo que indica que no hay áreas con valores faltantes. Dado que no hay valores faltantes, no se realizó un análisis específico de la distribución de los valores faltantes en relación con variables clave. Por lo tanto, la interpretación de los resultados no se ve afectada por la ausencia de valores faltantes en ninguna variable crítica."
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "P1VEBAxbnqYM"
+        "id": "ey-ds_MYpaem"
       },
       "outputs": [],
       "source": [
@@ -129,8 +131,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "h-vHGwTWnqYO",
-        "outputId": "c04b7670-f6e8-4527-ec50-9d178b844178"
+        "id": "6PiUUoKipaeq",
+        "outputId": "b20278a5-afd8-4f8f-bc53-ac2be89d8389"
       },
       "outputs": [
         {
@@ -237,7 +239,7 @@
       "execution_count": null,
       "metadata": {
         "id": "--J8K7mfgm2m",
-        "outputId": "d8248d4a-3427-4834-e58b-d2cbb6906307"
+        "outputId": "f18ac84d-a78f-43cc-ca42-78aa09df59ca"
       },
       "outputs": [
         {
@@ -287,7 +289,7 @@
       "execution_count": null,
       "metadata": {
         "id": "z_F5tlESgnjG",
-        "outputId": "65bf5636-07e1-4264-9439-528cf39394de"
+        "outputId": "6608c8d0-28a0-4b12-95c7-2ca22ba00cbb"
       },
       "outputs": [
         {
@@ -314,7 +316,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "8LKg0VUPnqYR"
+        "id": "GIxBr-4rpaev"
       },
       "outputs": [],
       "source": [
@@ -326,8 +328,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "CUiG0s81nqYR",
-        "outputId": "a128f2d7-7211-4017-8f12-9e54a6d04fae"
+        "id": "2pM-qksipaew",
+        "outputId": "7e906dfb-5f26-4375-f296-1069b5ff373c"
       },
       "outputs": [
         {
@@ -364,7 +366,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "KGz-TbhPnqYS"
+        "id": "JWk93w4Hpaew"
       },
       "outputs": [],
       "source": [
@@ -380,7 +382,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "7BdMB7l-nqYS"
+        "id": "CBB1ffkzpaex"
       },
       "outputs": [],
       "source": [
@@ -431,8 +433,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "3Owr_PjmnqYT",
-        "outputId": "6d6b28a6-c353-4ce5-8d2a-fd4a04e3213c"
+        "id": "aoeRNtUQpaey",
+        "outputId": "773e7c23-bdcd-41ac-ab10-049d545bddf3"
       },
       "outputs": [
         {
@@ -459,8 +461,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "SDNnGDlanqYT",
-        "outputId": "9c3f842f-b353-4836-cfeb-ab00c8311e9c"
+        "id": "x3oeQB3wpaey",
+        "outputId": "a9b1e558-124a-4f20-fc00-f38422c2b509"
       },
       "outputs": [
         {
@@ -480,7 +482,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "pJzLSXoQnqYT"
+        "id": "54TCwR6ipaez"
       },
       "outputs": [],
       "source": [
@@ -495,8 +497,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "RfJntJsVnqYU",
-        "outputId": "30623b3c-8ef6-47b6-9e80-0b1953b8135f"
+        "id": "HEd9lIKOpaez",
+        "outputId": "5629b42c-6447-4a54-cbdd-c10d7a65d92d"
       },
       "outputs": [
         {
@@ -558,8 +560,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "dXGuDFO3nqYV",
-        "outputId": "492f6b97-56b5-47f5-927d-603c68dabcf7"
+        "id": "DCZrtaempae0",
+        "outputId": "7a4f541b-e2d1-420d-fc75-cad71b2b8f9c"
       },
       "outputs": [
         {
@@ -587,8 +589,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "5Ta8zJ8onqYV",
-        "outputId": "79d69f30-0b86-4e69-87dd-1136ce0c7460"
+        "id": "aFrHfyV5pae1",
+        "outputId": "bd84f620-5a74-43ae-e957-6e6bfeebe72c"
       },
       "outputs": [
         {
