--- a/M1U4_fase_3_Preparación_de_los_datos.ipynb
+++ b/M1U4_fase_3_Preparación_de_los_datos.ipynb
@@ -1,25 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/Robert-Gomez-AI/HeartFailure/blob/main/M1U4_fase_3_Preparaci%C3%B3n_de_los_datos.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -27,12 +12,12 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "<img src = \"https://drive.google.com/uc?export=view&id=1rSrsZ04aJ_D3BC67Cy2dBUZ6tmguydNf\" alt = \"Encabezado MLDS\" width = \"100%\">  </img>"
-      ],
       "metadata": {
         "id": "2qrgS_sCJquS"
-      }
+      },
+      "source": [
+        "<img src = \"https://drive.google.com/uc?export=view&id=1rSrsZ04aJ_D3BC67Cy2dBUZ6tmguydNf\" alt = \"Encabezado MLDS\" width = \"100%\">  </img>"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -64,9 +49,178 @@
         "id": "ckNDI7ftUrpa"
       },
       "source": [
-        "1. ---**INGRESE SU RESPUESTA**---\n",
-        "2. ---**INGRESE SU RESPUESTA**---\n",
-        "3. ---**INGRESE SU RESPUESTA**---"
+        "1. John Robert Gomez Pachón\n",
+        "2. Yojhan Leandro Roldan Robles\n",
+        "3. Daniela Mejia Castro"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import pandas as pd\n",
+        "\n",
+        "df=pd.read_csv('Data/heart_failure_clinical_records_dataset.csv')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>age</th>\n",
+              "      <th>anaemia</th>\n",
+              "      <th>creatinine_phosphokinase</th>\n",
+              "      <th>diabetes</th>\n",
+              "      <th>ejection_fraction</th>\n",
+              "      <th>high_blood_pressure</th>\n",
+              "      <th>platelets</th>\n",
+              "      <th>serum_creatinine</th>\n",
+              "      <th>serum_sodium</th>\n",
+              "      <th>sex</th>\n",
+              "      <th>smoking</th>\n",
+              "      <th>time</th>\n",
+              "      <th>DEATH_EVENT</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>75.0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>582</td>\n",
+              "      <td>0</td>\n",
+              "      <td>20</td>\n",
+              "      <td>1</td>\n",
+              "      <td>265000.00</td>\n",
+              "      <td>1.9</td>\n",
+              "      <td>130</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>4</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>55.0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>7861</td>\n",
+              "      <td>0</td>\n",
+              "      <td>38</td>\n",
+              "      <td>0</td>\n",
+              "      <td>263358.03</td>\n",
+              "      <td>1.1</td>\n",
+              "      <td>136</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>6</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>65.0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>146</td>\n",
+              "      <td>0</td>\n",
+              "      <td>20</td>\n",
+              "      <td>0</td>\n",
+              "      <td>162000.00</td>\n",
+              "      <td>1.3</td>\n",
+              "      <td>129</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>7</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>50.0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>111</td>\n",
+              "      <td>0</td>\n",
+              "      <td>20</td>\n",
+              "      <td>0</td>\n",
+              "      <td>210000.00</td>\n",
+              "      <td>1.9</td>\n",
+              "      <td>137</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>7</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>65.0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>160</td>\n",
+              "      <td>1</td>\n",
+              "      <td>20</td>\n",
+              "      <td>0</td>\n",
+              "      <td>327000.00</td>\n",
+              "      <td>2.7</td>\n",
+              "      <td>116</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>8</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "    age  anaemia  creatinine_phosphokinase  diabetes  ejection_fraction  \\\n",
+              "0  75.0        0                       582         0                 20   \n",
+              "1  55.0        0                      7861         0                 38   \n",
+              "2  65.0        0                       146         0                 20   \n",
+              "3  50.0        1                       111         0                 20   \n",
+              "4  65.0        1                       160         1                 20   \n",
+              "\n",
+              "   high_blood_pressure  platelets  serum_creatinine  serum_sodium  sex  \\\n",
+              "0                    1  265000.00               1.9           130    1   \n",
+              "1                    0  263358.03               1.1           136    1   \n",
+              "2                    0  162000.00               1.3           129    1   \n",
+              "3                    0  210000.00               1.9           137    1   \n",
+              "4                    0  327000.00               2.7           116    0   \n",
+              "\n",
+              "   smoking  time  DEATH_EVENT  \n",
+              "0        0     4            1  \n",
+              "1        0     6            1  \n",
+              "2        1     7            1  \n",
+              "3        0     7            1  \n",
+              "4        0     8            1  "
+            ]
+          },
+          "execution_count": 2,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "df.head()"
       ]
     },
     {
@@ -90,6 +244,9 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "f4K7dEZKeiit"
+      },
       "source": [
         "### **1.1. Valores faltantes**\n",
         "---\n",
@@ -98,33 +255,58 @@
         "* ¿Cómo se identificaron los valores faltantes en el conjunto de datos?\n",
         "* ¿Cuáles fueron los criterios para decidir si rellenar con valores estimados o eliminar los valores faltantes? En caso que aplique, ¿qué método de relleno se utilizó y por qué se consideró apropiado?\n",
         "* ¿Se realizó un análisis de la distribución de los valores faltantes en relación con las variables clave? Por ejemplo, si hay valores faltantes en una variable crítica, ¿cómo podría afectar la interpretación de los resultados?"
-      ],
-      "metadata": {
-        "id": "f4K7dEZKeiit"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "---**INGRESE SU RESPUESTA**---"
-      ],
-      "metadata": {
-        "id": "rJ51sNCRgl58"
-      }
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "b2e644a9"
-      },
-      "outputs": [],
-      "source": [
-        "# ---INGRESE SU CÓDIGO---"
       ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "rJ51sNCRgl58"
+      },
+      "source": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 5,
+      "metadata": {
+        "id": "b2e644a9"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 299 entries, 0 to 298\n",
+            "Data columns (total 13 columns):\n",
+            " #   Column                    Non-Null Count  Dtype  \n",
+            "---  ------                    --------------  -----  \n",
+            " 0   age                       299 non-null    float64\n",
+            " 1   anaemia                   299 non-null    int64  \n",
+            " 2   creatinine_phosphokinase  299 non-null    int64  \n",
+            " 3   diabetes                  299 non-null    int64  \n",
+            " 4   ejection_fraction         299 non-null    int64  \n",
+            " 5   high_blood_pressure       299 non-null    int64  \n",
+            " 6   platelets                 299 non-null    float64\n",
+            " 7   serum_creatinine          299 non-null    float64\n",
+            " 8   serum_sodium              299 non-null    int64  \n",
+            " 9   sex                       299 non-null    int64  \n",
+            " 10  smoking                   299 non-null    int64  \n",
+            " 11  time                      299 non-null    int64  \n",
+            " 12  DEATH_EVENT               299 non-null    int64  \n",
+            "dtypes: float64(3), int64(10)\n",
+            "memory usage: 30.5 KB\n"
+          ]
+        }
+      ],
+      "source": [
+        "df.info()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "4qKkkYiCeqFg"
+      },
       "source": [
         "### **1.2. Valores duplicados**\n",
         "----\n",
@@ -137,19 +319,16 @@
         "* ¿Cómo se aseguró de que la eliminación de duplicados no afectara negativamente la representación del conjunto de datos?\n",
         "\n",
         "La identificación y eliminación de duplicados busca asegurar que cada registro aporte información única y valiosa."
-      ],
-      "metadata": {
-        "id": "4qKkkYiCeqFg"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "---**INGRESE SU RESPUESTA**---"
-      ],
       "metadata": {
         "id": "Tj3bKLXJgm2m"
-      }
+      },
+      "source": [
+        "---**INGRESE SU RESPUESTA**---"
+      ]
     },
     {
       "cell_type": "code",
@@ -164,6 +343,9 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "4pVqw4XWeuly"
+      },
       "source": [
         "### **1.3. Valores atípicos**\n",
         "---\n",
@@ -174,19 +356,16 @@
         "* ¿Cuál fue la decisión final sobre cómo tratar los valores atípicos y por qué?\n",
         "\n",
         "La elección entre eliminar o transformar estos valores debe basarse en su influencia en la distribución y la interpretación de los resultados, asegurando que el análisis refleje de manera precisa la realidad del conjunto de datos."
-      ],
-      "metadata": {
-        "id": "4pVqw4XWeuly"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "---**INGRESE SU RESPUESTA**---"
-      ],
       "metadata": {
         "id": "_nFAW9v5gnjF"
-      }
+      },
+      "source": [
+        "---**INGRESE SU RESPUESTA**---"
+      ]
     },
     {
       "cell_type": "code",
@@ -201,6 +380,9 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "VIsvbU-ueysh"
+      },
       "source": [
         "### **1.4. Datos Inconsistentes**\n",
         "---\n",
@@ -211,19 +393,16 @@
         "* ¿Cómo se pueden homogeneizar unidades y formatos para garantizar coherencia en el análisis?\n",
         "* ¿Qué estrategias se implementaron para abordar las inconsistencias y asegurar la coherencia?\n",
         "* ¿Se establecieron reglas de validación específicas para garantizar la consistencia?"
-      ],
-      "metadata": {
-        "id": "VIsvbU-ueysh"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "---**INGRESE SU RESPUESTA**---"
-      ],
       "metadata": {
         "id": "nDqIYfpCgn8B"
-      }
+      },
+      "source": [
+        "---**INGRESE SU RESPUESTA**---"
+      ]
     },
     {
       "cell_type": "code",
@@ -238,6 +417,9 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "i2HDxOgae2zH"
+      },
       "source": [
         "### **1.5. Datos corruptos**\n",
         "---\n",
@@ -245,19 +427,16 @@
         "* ¿Cómo se determinó la presencia de datos corruptos en el conjunto de datos?\n",
         "* ¿Qué medidas se tomaron para corregir o eliminar los datos corruptos?\n",
         "* ¿Hubo casos en los que la corrupción de datos no pudo ser manejada y cómo se justificó esa decisión?"
-      ],
-      "metadata": {
-        "id": "i2HDxOgae2zH"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "---**INGRESE SU RESPUESTA**---"
-      ],
       "metadata": {
         "id": "uGyRX1eLgoSy"
-      }
+      },
+      "source": [
+        "---**INGRESE SU RESPUESTA**---"
+      ]
     },
     {
       "cell_type": "code",
@@ -272,6 +451,9 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "ciaXdOS5fY6a"
+      },
       "source": [
         "### **1.6. Selección de datos**\n",
         "---\n",
@@ -279,19 +461,16 @@
         "* ¿Qué criterios se utilizaron para seleccionar los datos relevantes para el análisis?\n",
         "* ¿Se aplicaron técnicas de muestreo o filtrado para reducir el tamaño del conjunto de datos?\n",
         "* ¿Cómo se justificó la inclusión o exclusión de ciertas variables en la selección de datos?"
-      ],
-      "metadata": {
-        "id": "ciaXdOS5fY6a"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "---**INGRESE SU RESPUESTA**---"
-      ],
       "metadata": {
         "id": "_Sj0ntaagooI"
-      }
+      },
+      "source": [
+        "---**INGRESE SU RESPUESTA**---"
+      ]
     },
     {
       "cell_type": "code",
@@ -306,6 +485,9 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "ceibuW1dNH9a"
+      },
       "source": [
         "## **Créditos**\n",
         "* **Profesor:** [Felipe Restrepo Calle](https://dis.unal.edu.co/~ferestrepoca/)\n",
@@ -317,10 +499,31 @@
         "    - [Edder Hernández Forero](https://www.linkedin.com/in/edder-hernandez-forero-28aa8b207/).\n",
         "    \n",
         "**Universidad Nacional de Colombia** - *Facultad de Ingeniería*"
-      ],
-      "metadata": {
-        "id": "ceibuW1dNH9a"
-      }
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "include_colab_link": true,
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.11.7"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
