--- a/Entrega Final Proyecto.ipynb
+++ b/Entrega Final Proyecto.ipynb
@@ -4135,6 +4135,19 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "**Conclusiones sección 2**\n",
+        "\n",
+        "El conjunto de datos seleccionado no requería de una preparación o filtrado dado que elementos como datos faltantes, corruptos o duplicados no estuvieron presentes en el dataset. Identificamos dos posibiles causas de este fenomeno: la primera consiste en una captura de datos muy precisa y controlada que permitió construir un conjunto de datos muy consistene; la segunda se refiere a un proceso de depuración realizada al dataset original previo a la publicación de los datos en Kaggle.\n",
+        "\n",
+        " \n",
+        "**Conclusiones sección 3**\n",
+        "\n",
+        "Mediante las visualizaciones de los datos con herramientas como los graficos de caja y los histogramas, se logró preveer que ninguna de las variables cuantitativas presentaba una distribución normal (lo cual fue en cierta manera inesperado). Lo anterior se utilizó un criterio para decidir no eliminar posibles datos atipicos o outliers ya que existía la posibilidad de que estos datos brindaran información relevante en la predicción del evento de muerte.\n",
+        "\n",
+        " \n",
+        "\n",
+        "El uso de graficas de conteo CountPlot nos permitió encontrar que el conjunto de datos contaba con más registros con un evento de muerte falseo que verdadero, en una relación de 2 a 1. Esto puede generar un desbalance al momento de implementar un modelo de predicción sobre la variable de evento de muerte, especialmente porque el modelo puede aprender más acerca de la predicción de los eventos falsos de muerte que de los verdaderos.\n",
+        "\n",
         "**Conclusiones sección 4**\n",
         "\n",
         "En la sección 4 generamos unos análisis de correlación y un modelo de regresión logistica, de cuya interpretación en conjunción con la correlación da cómo resultado las siguiente lista de parametros con inferencias sobre los mismos. \n",
