--- a/Entrega Final Proyecto.ipynb
+++ b/Entrega Final Proyecto.ipynb
@@ -4135,6 +4135,15 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "\n",
+        "**Conclusiones sección 1**\n",
+        "\n",
+        "El proyecto de análisis de datos bioestadísticos en el área de la salud, específicamente en la predicción de fallos cardíacos, tiene como objetivo principal reducir los factores de riesgo y priorizar tratamientos preventivos para mejorar los resultados en pacientes con problemas cardíacos. Esto demuestra un enfoque proactivo hacia la gestión de la salud cardiovascular, lo que puede conducir a una reducción significativa de la morbilidad y la mortalidad relacionadas con enfermedades cardíacas.\n",
+        "\n",
+        "A través de la implementación de técnicas de análisis exploratorio, correlación y visualización de datos, se espera identificar patrones y relaciones entre las variables clínicas y los fallos cardíacos. Estos hallazgos proporcionarán una comprensión más profunda de los factores de riesgo y permitirán el desarrollo de modelos predictivos precisos para evaluar el riesgo cardiovascular en pacientes. Este enfoque basado en datos tiene el potencial de mejorar la precisión de los diagnósticos y la eficacia de los tratamientos, mejorando así la calidad de la atención médica.\n",
+        "\n",
+        "Al proporcionar información valiosa para mejorar la toma de decisiones clínicas y priorizar tratamientos preventivos, el proyecto contribuirá a la optimización de los recursos en el sector de la salud y al bienestar general de los pacientes con enfermedades cardíacas.\n",
+        "\n",
         "**Conclusiones sección 2**\n",
         "\n",
         "El conjunto de datos seleccionado no requería de una preparación o filtrado dado que elementos como datos faltantes, corruptos o duplicados no estuvieron presentes en el dataset. Identificamos dos posibiles causas de este fenomeno: la primera consiste en una captura de datos muy precisa y controlada que permitió construir un conjunto de datos muy consistene; la segunda se refiere a un proceso de depuración realizada al dataset original previo a la publicación de los datos en Kaggle.\n",
