--- a/M2U5_fase_4_Modelamiento.ipynb
+++ b/M2U5_fase_4_Modelamiento.ipynb
@@ -1708,7 +1708,9 @@
         "## **4. Aplicación del modelo**\n",
         "---\n",
         "\n",
-        "Los diagnósticos se realizan en bloque y se almacenan junto con las probabilidades en un dataframe para facilitar la gestión y el análisis de la información. Al agrupar los diagnósticos en bloque, se puede procesar de manera eficiente un gran volumen de datos de pacientes, lo que es fundamental en entornos clínicos donde se realizan múltiples diagnósticos simultáneamente. Además, almacenar tanto el diagnóstico como la probabilidad asociada en un dataframe permite una fácil visualización y comparación de los resultados, lo que facilita la toma de decisiones clínicas informadas y la identificación de patrones o tendencias en los datos de diagnóstico."
+        "Los diagnósticos se realizan en bloque y se almacenan junto con las probabilidades en un dataframe para facilitar la gestión y el análisis de la información. Al agrupar los diagnósticos en bloque, se puede procesar de manera eficiente un gran volumen de datos de pacientes, lo que es fundamental en entornos clínicos donde se realizan múltiples diagnósticos simultáneamente. Además, almacenar tanto el diagnóstico como la probabilidad asociada en un dataframe permite una fácil visualización y comparación de los resultados, lo que facilita la toma de decisiones clínicas informadas y la identificación de patrones o tendencias en los datos de diagnóstico.\n",
+        "\n",
+        "Utilizar un modelo de regresión logística para generar estos diagnósticos ofrece la ventaja adicional de su capacidad de generalización. La regresión logística puede aprender patrones y relaciones complejas en los datos de entrenamiento y aplicar ese conocimiento para hacer predicciones precisas en nuevos conjuntos de datos. Esto significa que el modelo puede adaptarse a diferentes condiciones y contextos clínicos, lo que aumenta su utilidad y relevancia en diversas situaciones médicas. Además, la regresión logística proporciona una medida de incertidumbre a través de las probabilidades asociadas a cada diagnóstico, lo que permite una evaluación más completa y precisa de la confiabilidad de las predicciones realizadas."
       ],
       "metadata": {
         "id": "i_NYlM0dP_CI"
@@ -1768,12 +1770,12 @@
         "data"
       ],
       "metadata": {
-        "id": "QfrtfsaeEtgt",
-        "outputId": "7e7a3c65-4174-4aea-cf0c-522f0f7fa11d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 424
-        }
+        },
+        "id": "QfrtfsaeEtgt",
+        "outputId": "7e7a3c65-4174-4aea-cf0c-522f0f7fa11d"
       },
       "id": "QfrtfsaeEtgt",
       "execution_count": 196,
@@ -2120,12 +2122,12 @@
         "prediction_all"
       ],
       "metadata": {
-        "id": "kGuu4LJhGHaM",
-        "outputId": "f98d1e10-589c-4929-c895-1a762df2b4bc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1142
-        }
+        },
+        "id": "kGuu4LJhGHaM",
+        "outputId": "f98d1e10-589c-4929-c895-1a762df2b4bc"
       },
       "id": "kGuu4LJhGHaM",
       "execution_count": 201,
