--- a/ProyectoAplicadoBigData_PrimeraEntrega.ipynb
+++ b/ProyectoAplicadoBigData_PrimeraEntrega.ipynb
@@ -101,7 +101,7 @@
         "* Las principales tecnologías seleccionadas para este proyecto son:\n",
         "* Lenguaje de programación: Python\n",
         "* Bibliotecas de procesamiento de lenguaje natural (NLP): NLTK, spaCy\n",
-        "* Bibliotecas de aprendizaje automático: scikit-learn, TensorFlow, PyTorch\n",
+        "* Bibliotecas de aprendizaje computacional: scikit-learn, TensorFlow, PyTorch\n",
         "* Google Colab para el desarrollo colaborativo y la ejecución de código en la nube\n",
         "\n",
         "2. Beneficios de las Tecnologías Seleccionadas:\n",
@@ -168,10 +168,14 @@
         "* TensorFlow\n",
         "* PyTorch\n",
         "* Google Colab\n",
+        "* MongoDB\n",
         "\n",
         "2. Requisitos Específicos del Sistema:\n",
         "Sistema operativo compatible con Python y las bibliotecas mencionadas.\n",
         "Espacio suficiente en disco para instalar Python y las bibliotecas.\n",
+        "\n",
+        "* Base de datos almacenada en MongoDB, para ello el dataset debe cumplir con los requerimientos de almacenamiento para la versión no paga de MongoDB. Es decir que preferiblemente usaremos un dataset de menos de 5GB. Sin embargo, en caso de que requiramos usar más espacio de almacenamiento o un mejor procesamiento, optaremos por contemplar otras alternativas.\n",
+        "\n",
         "\n",
         "3. Configuración y Personalización:\n",
         "\n",
@@ -243,23 +247,55 @@
     {
       "cell_type": "code",
       "source": [
-        "# Instalar bibliotecas de procesamiento de lenguaje natural y aprendizaje automático\n",
-        "pip install nltk spacy tensorflow torch\n",
-        "# Descargar modelos de spaCy (opcional)\n",
-        "python -m spacy download en_core_web_sm\n"
+        "# Instalar bibliotecas de procesamiento de lenguaje natural y aprendizaje automático (spacy y scikit-learn)\n",
+        "!pip install -U spacy\n",
+        "!pip install nltk spacy tensorflow torch\n",
+        "\n",
+        "!pip install -U scikit-learn"
       ],
       "metadata": {
-        "id": "P9IyB-5T_EB3"
+        "id": "P9IyB-5T_EB3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a47239f5-324d-4854-88c1-8114cec2f72f"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: scikit-learn in /usr/local/lib/python3.10/dist-packages (1.4.2)\n",
+            "Requirement already satisfied: numpy>=1.19.5 in /usr/local/lib/python3.10/dist-packages (from scikit-learn) (1.25.2)\n",
+            "Requirement already satisfied: scipy>=1.6.0 in /usr/local/lib/python3.10/dist-packages (from scikit-learn) (1.11.4)\n",
+            "Requirement already satisfied: joblib>=1.2.0 in /usr/local/lib/python3.10/dist-packages (from scikit-learn) (1.4.2)\n",
+            "Requirement already satisfied: threadpoolctl>=2.0.0 in /usr/local/lib/python3.10/dist-packages (from scikit-learn) (3.5.0)\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "Paso 4: Importar librerias necesarias"
+      ],
       "metadata": {
-        "id": "_ZG41yjI_HUV"
+        "id": "6vJrNGRiGZsi"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Implementaremos numpy para el uso de herramientas como arreglos y matrices multidimencionales\n",
+        "import numpy as np\n",
+        "#Implementaremos Scikit-learn para"
+      ],
+      "metadata": {
+        "id": "ZfXcP6OMGdKd"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
