--- a/AnalisisDeSentimientosConDask.ipynb
+++ b/AnalisisDeSentimientosConDask.ipynb
@@ -4431,7 +4431,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 745
+          "height": 817
         },
         "id": "fPrfu-bz-oGk",
         "outputId": "c2369ae2-2996-4a99-992f-e0b4459ece49"
@@ -4536,7 +4536,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 728
+          "height": 817
         },
         "id": "0Obyhn996kBm",
         "outputId": "18814261-0232-4c54-a8fc-9eb3df3eba36"
@@ -4619,7 +4619,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 745
+          "height": 817
         },
         "id": "R1kEEFHjCcyI",
         "outputId": "3629ef5d-a978-48ce-b6da-d6111b6aa4b8"
@@ -5413,7 +5413,7 @@
         "outputId": "e6b67aa5-38f0-4d0e-b093-3e8f87ec36b0",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 680
+          "height": 660
         }
       },
       "execution_count": 28,
@@ -5825,6 +5825,23 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Integrar un módulo de análisis de sentimiento en un proyecto de análisis de tweets aporta un valor significativo al enriquecer los insights y proporcionar una comprensión más profunda de las emociones y opiniones de los usuarios. Aunque los análisis previos con etiquetas de temas han sido útiles, añadir la capacidad de interpretar el sentimiento detrás de los tweets permite una mejor comprensión de las percepciones del público hacia determinados temas, productos o eventos. Esto es esencial para profundizar en los análisis, ya que saber si un tweet menciona un producto o tema de manera positiva, negativa o neutral añade una dimensión crucial que puede influir en decisiones estratégicas y en la formulación de políticas.\n",
+        "\n",
+        "El análisis de sentimiento en tiempo real es una ventaja considerable en el contexto de los tweets. En un entorno donde el sentimiento del público puede cambiar rápidamente, como en Twitter, poder etiquetar y analizar estos sentimientos al instante permite a las empresas, organizaciones o figuras públicas responder de manera más rápida y eficaz. Esta capacidad de análisis en tiempo real no solo mejora la respuesta inmediata, sino que también contribuye a mejorar la precisión de los modelos predictivos. Por ejemplo, los sentimientos negativos expresados en tweets anteriores pueden ser un indicador temprano de problemas de reputación o insatisfacción del cliente, permitiendo a la empresa tomar medidas proactivas para abordar estos problemas.\n",
+        "\n",
+        "El análisis de sentimiento también facilita una segmentación más precisa de los usuarios de Twitter. No se trata solo de segmentar por características demográficas o de comportamiento, sino también de entender las opiniones y emociones de los usuarios. Esto permite una personalización más efectiva de las campañas de marketing, el servicio al cliente y las respuestas a interacciones en redes sociales. Al mismo tiempo, un módulo de análisis de sentimiento ayuda a monitorear la percepción de la marca o figura pública en el mercado. Las empresas y figuras públicas pueden identificar rápidamente problemas de reputación y abordar comentarios negativos antes de que se amplifiquen, protegiendo así su imagen pública y manteniendo una relación positiva con los seguidores.\n",
+        "\n",
+        "Evaluar el impacto de las campañas de marketing o eventos específicos es otro beneficio crucial. El análisis de sentimiento proporciona una métrica más completa del éxito al no solo considerar el volumen de menciones, sino también el sentimiento asociado a esas menciones. Esto guía la optimización de futuras campañas, asegurando que se alineen mejor con las expectativas y emociones del público. Además, la capacidad de realizar análisis longitudinales del sentimiento permite observar cómo cambian las percepciones a lo largo del tiempo. Esto es esencial para identificar tendencias y correlacionarlas con eventos específicos o cambios en la estrategia de la empresa o figura pública.\n",
+        "\n",
+        "El análisis de sentimiento también estructura los datos no estructurados, como tweets, convirtiéndolos en información accesible y útil para análisis posteriores. Esta estructuración mejora la capacidad de la empresa para extraer insights significativos de grandes volúmenes de datos no estructurados. Una vez implementado, el módulo de análisis de sentimiento puede automatizar el etiquetado de nuevos tweets a medida que ingresan al sistema, garantizando consistencia y escalabilidad. A medida que el volumen de tweets crece, el sistema puede manejar mayores cantidades de texto sin perder precisión ni velocidad, y puede ser entrenado continuamente con nuevos datos para mejorar su precisión y adaptabilidad."
+      ],
+      "metadata": {
+        "id": "rp8u7nPLo1h_"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
@@ -5859,8 +5876,6 @@
         "                           load_dataset('dair-ai/emotion', split='validation'))"
       ],
       "metadata": {
-        "id": "XBqXvz30TphQ",
-        "outputId": "d0024d48-2bad-4a5f-bcac-803ab7c8d488",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 394,
@@ -5965,7 +5980,9 @@
             "fced24e0448f41e2a4bbf53d5b5999a7",
             "591a824df65a4bb589afded898cfee85"
           ]
-        }
+        },
+        "id": "XBqXvz30TphQ",
+        "outputId": "d0024d48-2bad-4a5f-bcac-803ab7c8d488"
       },
       "execution_count": 35,
       "outputs": [
@@ -6138,10 +6155,12 @@
     {
       "cell_type": "code",
       "source": [
-        "def process_data(data):\n",
-        "  # Tokenizar el texto\n",
+        "def get_tokenizer(data):\n",
         "  tokenizer = Tokenizer(num_words=5000, oov_token=\"<OOV>\")\n",
         "  tokenizer.fit_on_texts(data['text'])\n",
+        "  return tokenizer\n",
+        "\n",
+        "def process_data(data, tokenizer):\n",
         "  sequences = tokenizer.texts_to_sequences(data['text'])\n",
         "  padded_sequences = pad_sequences(sequences, padding='post')\n",
         "\n",
@@ -6153,18 +6172,19 @@
       "metadata": {
         "id": "Mrk25tUsUjoB"
       },
-      "execution_count": 46,
+      "execution_count": 84,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "X,y ,label_encoder= process_data(train)"
+        "tokenizer= get_tokenizer(train)\n",
+        "X,y ,label_encoder= process_data(train,tokenizer)"
       ],
       "metadata": {
         "id": "SpGTDXgXWHyY"
       },
-      "execution_count": 63,
+      "execution_count": 85,
       "outputs": []
     },
     {
@@ -6173,11 +6193,11 @@
         "X_val"
       ],
       "metadata": {
-        "id": "Q9rt_fw6beXe",
-        "outputId": "6b5583f1-70e6-415c-cbe2-7a190f7b4c96",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Q9rt_fw6beXe",
+        "outputId": "6b5583f1-70e6-415c-cbe2-7a190f7b4c96"
       },
       "execution_count": 61,
       "outputs": [
@@ -6202,13 +6222,39 @@
     {
       "cell_type": "code",
       "source": [
-        "X_val, y_val,_ = process_data(validation)"
+        "X_val, y_val,_ = process_data(validation, tokenizer)"
       ],
       "metadata": {
         "id": "ZG-G6CSXZyh9"
       },
-      "execution_count": 55,
+      "execution_count": 86,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X_val.shape"
+      ],
+      "metadata": {
+        "id": "jipeJTrboT8h",
+        "outputId": "742e034f-1f91-4f25-b0b0-1c69593ae662",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 90,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(2000, 61)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 90
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -6241,11 +6287,11 @@
         "model.summary()"
       ],
       "metadata": {
-        "id": "XzTQZfEIWCzX",
-        "outputId": "0336c278-689e-4d42-86cf-94d054108629",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "XzTQZfEIWCzX",
+        "outputId": "0336c278-689e-4d42-86cf-94d054108629"
       },
       "execution_count": 65,
       "outputs": [
@@ -6295,12 +6341,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "_nhkN-OuWYuQ",
-        "outputId": "df11ae4a-dcae-4206-efe2-ea49d60e76e8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 829
-        }
+        },
+        "id": "_nhkN-OuWYuQ",
+        "outputId": "df11ae4a-dcae-4206-efe2-ea49d60e76e8"
       },
       "execution_count": 66,
       "outputs": [
@@ -6359,11 +6405,11 @@
         "X.shape"
       ],
       "metadata": {
-        "id": "RDYF1efHb5je",
-        "outputId": "d58ca620-4435-4386-b4ff-97a273bbb13e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "RDYF1efHb5je",
+        "outputId": "d58ca620-4435-4386-b4ff-97a273bbb13e"
       },
       "execution_count": 71,
       "outputs": [
@@ -6388,11 +6434,11 @@
         "                   callbacks=[reduce_lr])"
       ],
       "metadata": {
-        "id": "pWS7UDelWtfN",
-        "outputId": "65bf57db-b1f2-4c92-ef34-001df2f57186",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "pWS7UDelWtfN",
+        "outputId": "65bf57db-b1f2-4c92-ef34-001df2f57186"
       },
       "execution_count": 72,
       "outputs": [
@@ -6430,11 +6476,11 @@
         "  history.history"
       ],
       "metadata": {
-        "id": "O4MSYqhobULY",
-        "outputId": "1bbb4340-b02b-4067-d161-aa5093bfd43f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "O4MSYqhobULY",
+        "outputId": "1bbb4340-b02b-4067-d161-aa5093bfd43f"
       },
       "execution_count": 75,
       "outputs": [
@@ -6499,14 +6545,14 @@
         "  plt.show()"
       ],
       "metadata": {
-        "id": "0zodRU3GcQMg",
-        "outputId": "a08b045b-41df-4be5-e054-d04b3540683f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "0zodRU3GcQMg",
+        "outputId": "e0ee7321-70eb-433e-d07d-0e53d2a0aa43"
       },
-      "execution_count": 80,
+      "execution_count": 81,
       "outputs": [
         {
           "output_type": "display_data",
@@ -6559,6 +6605,17 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "na vez creada la red neuronal para el análisis de sentimiento y ver que tiene un alto rendimiento (87% de precisión en el conjunto de validación) podemos ponerla en producción para analizar tweets en tiempo real. Integrar esta herramienta en nuestro sistema nos permitirá etiquetar automáticamente cada tweet con su correspondiente sentimiento (positivo, negativo o neutral) al instante.\n",
+        "\n",
+        "Esto enriquecerá significativamente nuestros insights al añadir una comprensión más profunda de las emociones y opiniones de los usuarios, permitiendo decisiones estratégicas más informadas. La capacidad de analizar el sentimiento en tiempo real es esencial en Twitter, donde las percepciones pueden cambiar rápidamente. Con esta herramienta, podemos responder de manera más rápida y eficaz a cambios en el sentimiento del público, mejorando nuestra capacidad de gestionar la reputación y ajustar nuestras estrategias de marketing y comunicación."
+      ],
+      "metadata": {
+        "id": "c0H0f66gptN_"
+      }
     },
     {
       "cell_type": "code",
